--- a/src/main/resources/org/superservice/superservice/crearUsuario.fxml
+++ b/src/main/resources/org/superservice/superservice/crearUsuario.fxml
@@ -31,7 +31,10 @@
   </rowConstraints>
    <children>
       <Button fx:id="btnVolver" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#volverAlLogin" prefHeight="30.0" prefWidth="100.0" text="Volver" GridPane.halignment="LEFT" GridPane.rowIndex="8" />
-      <Button fx:id="btnCargarUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#cargarUsuario" prefHeight="30.0" prefWidth="100.0" text="Crear Usuario" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+      <Button fx:id="btnCargarUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#cargarUsuario" prefHeight="30.0" prefWidth="100.0" text="Crear Usuario" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Button>
       <Label text="Nombre de Usuario" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
          <font>
             <Font size="15.0" />
@@ -59,6 +62,6 @@
       <PasswordField fx:id="tfContrasenia" GridPane.rowIndex="7" GridPane.valignment="TOP" />
    </children>
    <padding>
-      <Insets left="10.0" right="10.0" top="10.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
 </GridPane>
