--- a/src/main/resources/org/superservice/superservice/login.fxml
+++ b/src/main/resources/org/superservice/superservice/login.fxml
@@ -26,19 +26,22 @@
       <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" valignment="TOP" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Button fx:id="btnSalir" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#salir" prefHeight="30.0" prefWidth="100.0" text="Salir" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-      <Button fx:id="btnCrearUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#crearUsuario" prefHeight="30.0" prefWidth="100.0" text="Crear Usuario" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+      <Button fx:id="btnCrearUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#crearUsuario" prefHeight="30.0" prefWidth="100.0" text="Nuevo usuario" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
       <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" text="Iniciar Sesión" textAlignment="JUSTIFY" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
       <TextField fx:id="tfNombreUsuario" GridPane.rowIndex="3" GridPane.valignment="TOP" />
-      <Button fx:id="btnIniciarSesion" maxHeight="30.0" maxWidth="150.0" minHeight="30.0" minWidth="150.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="30.0" prefWidth="150.0" text="Iniciar Sesión" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
+      <Button fx:id="btnIniciarSesion" maxHeight="30.0" maxWidth="150.0" minHeight="30.0" minWidth="150.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="30.0" prefWidth="150.0" text="Iniciar Sesión" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="TOP">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Button>
       <Label text="Nombre de Usuario" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
          <font>
             <Font size="15.0" />
