--- a/src/main/resources/org/superservice/superservice/pago.fxml
+++ b/src/main/resources/org/superservice/superservice/pago.fxml
@@ -86,7 +86,7 @@
             <Label text="Últimos 4 dígitos tarjeta:" GridPane.rowIndex="2" />
             <Label text="Marca de tarjeta:" />
             <Label text="Banco de tarjeta:" GridPane.rowIndex="1" />
-            <ComboBox fx:id="comboMarcaTarjeta" editable="true" prefWidth="150.0" promptText="Nueva marca..." GridPane.columnIndex="1" />
+            <ComboBox fx:id="comboMarcaTarjeta" editable="true" prefWidth="150.0" promptText="Nueva tarjeta..." GridPane.columnIndex="1" />
             <ComboBox fx:id="comboBancoTarjeta" editable="true" prefWidth="150.0" promptText="Nuevo banco..." GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="tfUltimos4" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="tfNroReferencia" GridPane.columnIndex="1" GridPane.rowIndex="3" />
