--- a/src/main/resources/org/superservice/superservice/inicio.fxml
+++ b/src/main/resources/org/superservice/superservice/inicio.fxml
@@ -77,6 +77,11 @@
          </font>
       </Label>
       <Separator prefWidth="200.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <Label fx:id="labelBienvenido" text="Bienvenido usuario!" textAlignment="JUSTIFY" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
    <padding>
       <Insets left="10.0" right="10.0" top="5.0" />
